--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 [dependencies]
 lazy_static = "1.5.0"
 rand = "0.9.0"
+
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 
 serenity = "0.12"
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+reqwest = { version = "0.12.12", features = ["json"] }
+tokio = { version = "1.21.2", features = ["full"] }
+openssl = { version = "0.10", features = ["vendored"] }
