--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ rig-core = "0.7.0"
 
 sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
 ffmpeg-next = "7.1.0"
+poise = "0.6.1"
