--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -19,18 +19,21 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - target: x86_64-pc-windows-gnu
-            archive: zip
+          #   - target: x86_64-pc-windows-gnu
+          #     archive: zip
           - target: x86_64-unknown-linux-musl
             archive: tar.gz tar.xz tar.zst
-          - target: x86_64-apple-darwin
-            archive: zip
+        #   - target: x86_64-apple-darwin
+        #     archive: zip
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.4.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
+        with:
+          TOOLCHAIN_VERSION: stable
           RUSTTARGET: ${{ matrix.target }}
-          RCHIVE_TYPES: ${{ matrix.archive }}
+          ARCHIVE_TYPES: ${{ matrix.archive }}
