--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -29,9 +29,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - uses: shogo82148/actions-setup-perl@v1
-        with:
-          perl-version: "5.38"
+      - run: apt update && apt install perl -y
 
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.4.5
