--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -21,7 +21,7 @@ jobs:
         include:
           #   - target: x86_64-pc-windows-gnu
           #     archive: zip
-          - target: x86_64-unknown-linux-musl
+          - target: x86_64-unknown-linux-gnu
             archive: tar.gz tar.xz tar.zst
         #   - target: x86_64-apple-darwin
         #     archive: zip
@@ -29,13 +29,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - run: apt update && apt install perl -y
+      - run: apt-get update && apt-get install perl -y
 
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.4.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          TOOLCHAIN_VERSION: stable
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
