--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - run: apt-get update && apt-get install perl -y
+      - uses: shogo82148/actions-setup-perl@v1
 
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.4.5
