--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -30,6 +30,8 @@ jobs:
         uses: actions/checkout@v4
 
       - uses: shogo82148/actions-setup-perl@v1
+        env:
+          GITHUB_TOKEN: ""
 
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.4.5
