--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@ jobs:
         with:
           # Disabling shallow clone is recommended for improving relevancy of reporting
           fetch-depth: 0
+      - name: Install rust toolchain
+        run: curl https://sh.rustup.rs -sSf | sh -s -- -y
       - name: Run SQ report
         run: cargo clippy --message-format=json &> report.json
       - name: SonarQube Scan
