--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
           host: ${{ vars.SONARQUBE_URL }}
           login: ${{ secrets.SONARQUBE_TOKEN }}
   build-and-push-image:
+    needs: sonarqube
     runs-on: ubuntu-latest
     permissions:
       contents: read
