--- a/renovate.json
+++ b/renovate.json
@@ -1,26 +1,49 @@
 {
-    "extends": [
-      "config:base"
-    ],
-    "schedule": [
-      "every weekend"
-    ],
-    "packageRules": [
-      {
-        "packagePatterns": ["*"],
-        "enabled": true,
-        "groupName": "all dependencies",
-        "schedule": ["every weekend"],
-        "automerge": true
-      },
-      {
-        "packagePatterns": ["*"],
-        "enabled": true,
-        "managers": ["dockerfile", "docker-compose"],
-        "paths": ["/"],
-        "groupName": "docker dependencies",
-        "schedule": ["every weekend"],
-        "automerge": true
-      }
-    ]
-  }
+  "extends": [
+    "config:base"
+  ],
+  "schedule": [
+    "every weekend"
+  ],
+  "packageRules": [
+    {
+      "packagePatterns": [
+        "*"
+      ],
+      "enabled": true,
+      "groupName": "all dependencies",
+      "schedule": [
+        "every weekend"
+      ],
+      "automerge": true
+    },
+    {
+      "packagePatterns": [
+        "*"
+      ],
+      "enabled": true,
+      "managers": [
+        "dockerfile",
+        "docker-compose"
+      ],
+      "paths": [
+        "/"
+      ],
+      "groupName": "docker dependencies",
+      "schedule": [
+        "every weekend"
+      ],
+      "automerge": true
+    },
+    {
+      "managers": [
+        "cargo"
+      ],
+      "groupName": "rust dependencies",
+      "schedule": [
+        "every weekend"
+      ],
+      "automerge": true
+    }
+  ]
+}
